@@ -507,6 +507,16 @@ void SCIPsortRealLongRealInt(
    int                   len                 /**< length of arrays */
    );
 
+/** sort of four joint arrays of Reals/Reals/ints/ints, sorted by first array in non-decreasing order */
+extern
+void SCIPsortRealRealIntInt(
+   SCIP_Real*            realarray1,         /**< SCIP_Real array to be sorted */
+   SCIP_Real*            realarray2,         /**< SCIP_Real array to be permuted in the same way */
+   int*                  intarray1,          /**< int array to be permuted in the same way */
+   int*                  intarray2,          /**< int array to be permuted in the same way */
+   int                   len                 /**< length of arrays */
+   );
+
 /** sort of four joint arrays of Reals/Reals/Reals/ints, sorted by first array in non-decreasing order */
 extern
 void SCIPsortRealRealRealInt(
@@ -869,6 +879,17 @@ void SCIPsortDownRealLongRealInt(
    int*                  intarray,           /**< int array  to be permuted in the same way */
    int                   len                 /**< length of arrays */
    );
+
+/** sort of four joint arrays of Reals/Reals/ints/ints, sorted by first array in non-increasing order */
+extern
+void SCIPsortDownRealRealIntInt(
+   SCIP_Real*            realarray1,         /**< SCIP_Real array to be sorted */
+   SCIP_Real*            realarray2,         /**< SCIP_Real array to be permuted in the same way */
+   int*                  intarray1,          /**< int array to be permuted in the same way */
+   int*                  intarray2,          /**< int array to be permuted in the same way */
+   int                   len                 /**< length of arrays */
+   );
+
 
 /** sort of four joint arrays of Reals/Reals/Reals/ints, sorted by first array in non-increasing order */
 extern
@@ -1289,6 +1310,20 @@ void SCIPsortedvecInsertRealLongRealInt(
    SCIP_Real             keyval,             /**< key value of new element */
    SCIP_Longint          field1val,          /**< additional value of new element */
    SCIP_Real             field2val,          /**< additional value of new element */
+   int                   field3val,          /**< additional value of new element */
+   int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
+   );
+
+/** insert a new element into four joint arrays of Reals/Reals/ints/ints, sorted by first array in non-decreasing order */
+extern
+void SCIPsortedvecInsertRealRealIntInt(
+   SCIP_Real*            realarray1,         /**< first SCIP_Real array where an element is to be inserted */
+   SCIP_Real*            realarray2,         /**< second SCIP_Real array where an element is to be inserted */
+   int*                  intarray1,          /**< first int array where an element is to be inserted */
+   int*                  intarray2,          /**< second int array where an element is to be inserted */
+   SCIP_Real             keyval,             /**< key value of new element */
+   SCIP_Real             field1val,          /**< additional value of new element */
+   int                   field2val,          /**< additional value of new element */
    int                   field3val,          /**< additional value of new element */
    int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
    );
@@ -1771,6 +1806,20 @@ void SCIPsortedvecInsertDownRealLongRealInt(
    int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
    );
 
+/** insert a new element into four joint arrays of Reals/Reals/ints/ints, sorted by first array in non-increasing order */
+extern
+void SCIPsortedvecInsertDownRealRealIntInt(
+   SCIP_Real*            realarray1,         /**< first SCIP_Real array where an element is to be inserted */
+   SCIP_Real*            realarray2,         /**< second SCIP_Real array where an element is to be inserted */
+   int*                  intarray1,          /**< first int array where an element is to be inserted */
+   int*                  intarray2,          /**< second int array where an element is to be inserted */
+   SCIP_Real             keyval,             /**< key value of new element */
+   SCIP_Real             field1val,          /**< additional value of new element */
+   int                   field2val,          /**< additional value of new element */
+   int                   field3val,          /**< additional value of new element */
+   int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
+   );
+
 /** insert a new element into four joint arrays of Reals/Reals/Reals/ints, sorted by first array in non-increasing order */
 extern
 void SCIPsortedvecInsertDownRealRealRealInt(
@@ -2205,6 +2254,17 @@ void SCIPsortedvecDelPosRealLongRealInt(
    int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
    );
 
+/** delete the element at the given position from four joint arrays of Reals/Reals/ints/ints, sorted by first array in non-decreasing order */
+extern
+void SCIPsortedvecDelPosRealRealIntInt(
+   SCIP_Real*            realarray1,         /**< SCIP_Real array where an element is to be deleted */
+   SCIP_Real*            realarray2,         /**< SCIP_Real array where an element is to be deleted */
+   int*                  intarray1,          /**< int array where an element is to be deleted */
+   int*                  intarray2,          /**< int array where an element is to be deleted */
+   int                   pos,                /**< array position of element to be deleted */
+   int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
+   );
+
 /** delete the element at the given position from four joint arrays of Reals/Reals/Reals/ints, sorted by first array in non-decreasing order */
 extern
 void SCIPsortedvecDelPosRealRealRealInt(
@@ -2605,6 +2665,17 @@ void SCIPsortedvecDelPosDownRealLongRealInt(
    SCIP_Longint*         longarray,          /**< SCIP_Longint array where an element is to be deleted */
    SCIP_Real*            realarray3,         /**< SCIP_Real array where an element is to be deleted */
    int*                  intarray,           /**< int array where an element is to be deleted */
+   int                   pos,                /**< array position of element to be deleted */
+   int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
+   );
+
+/** delete the element at the given position from four joint arrays of Reals/Reals/ints/ints, sorted by first array in non-increasing order */
+extern
+void SCIPsortedvecDelPosDownRealRealIntInt(
+   SCIP_Real*            realarray1,         /**< SCIP_Real array where an element is to be deleted */
+   SCIP_Real*            realarray2,         /**< SCIP_Real array where an element is to be deleted */
+   int*                  intarray1,          /**< int array where an element is to be deleted */
+   int*                  intarray2,          /**< int array where an element is to be deleted */
    int                   pos,                /**< array position of element to be deleted */
    int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
    );
